--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,20 @@
   "name": "binaryoverload.github.io",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "js/main.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "js/unix_formatting.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -19,7 +30,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -136,7 +147,7 @@
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
-  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"]}",
+  "file-type-javascript": "{\"compilers\":[\"uglify-js\",\"babel\",\"uglify-js\"]}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
