--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,11 +10,16 @@
     {
       "path": "js/unix_formatting.js",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/main.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
-      "js"
+      "js",
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -35,28 +40,12 @@
   "fileWatcher": {
     "enabled": true,
     "watchedExtensions": [
-      "less",
-      "sass",
-      "scss",
-      "styl",
-      "md",
-      "markdown",
-      "coffee",
       "js",
-      "jade",
-      "haml",
-      "slim",
-      "ls",
-      "kit",
       "png",
       "jpg",
       "jpeg",
-      "ts",
-      "pug",
       "css",
-      "html",
-      "htm",
-      "php"
+      "html"
     ]
   },
   "pathFilters": [
@@ -147,7 +136,7 @@
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
-  "file-type-javascript": "{\"compilers\":[\"uglify-js\",\"babel\",\"uglify-js\"]}",
+  "file-type-javascript": "{\"compilers\":[\"uglify-js\",\"babel\",\"uglify-js\"],\"sourceMap\":true}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
