Lots of changes, mobile warning and the like!

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "js/main.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-babel\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     },
     {
       "path": "js/unix_formatting.js",
@@ -18,8 +18,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "js",
-      "css"
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -136,7 +135,7 @@
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
-  "file-type-javascript": "{\"compilers\":[\"uglify-js\",\"babel\",\"uglify-js\"],\"sourceMap\":true}",
+  "file-type-javascript": "{\"compilers\":[\"uglify-js\",\"babel\",\"uglify-js\"],\"sourceMap\":true,\"compiler-babel\":{\"enabled\":true}}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
