--- a/prepros-6.config
+++ b/prepros-6.config
@@ -18,7 +18,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "js"
+      "js",
+      "commands"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -44,7 +45,8 @@
       "jpg",
       "jpeg",
       "css",
-      "html"
+      "html",
+      "ansi"
     ]
   },
   "pathFilters": [
@@ -167,7 +169,6 @@
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
-      "cascade": true,
       "collapse_vars": true,
       "reduce_vars": true,
       "warnings": true,
@@ -186,7 +187,6 @@
     "output": {
       "ascii_only": false,
       "beautify": false,
-      "bracketize": false,
       "comments": "",
       "indent_level": 4,
       "indent_start": 0,
